Fix card display on small screens (add min-height)

--- a/css/snippets.less
+++ b/css/snippets.less
@@ -284,6 +284,7 @@
   .card-main {
     float: right;
     width: 75%;
+    min-height: 6*@line;
     @media all and (max-width: @break2)   {
       width: 100%;
       padding: 0;
@@ -293,8 +294,8 @@
 
   .card-main-wrapper {
     @media all and (max-width: @break2)   {
-      width: 90%;
-      padding: 0.5*@line 5% 0.5*@line 5%;
+      width: 100%;
+      padding: 0.5*@line 0 0.5*@line 0;
       background: @bg;
     }
   }
